# design_patterns

./: .gitignore  CMakeLists.txt
notifier/: CMakeLists.txt
notifier/notifier_concepts/: CMakeLists.txt  main.cpp
notifier/notifier_concepts/inc/: NotifierEmail.hpp  NotifierNull.hpp  NotifierStdOut.hpp
notifier/notifier_crtp/: CMakeLists.txt  main.cpp
notifier/notifier_crtp/inc/: Notifier.hpp  NotifierEmail.hpp  NotifierNull.hpp  NotifierStdOut.hpp
notifier/notifier_crtp/src/: NotifierEmail.cpp  NotifierNull.cpp  NotifierStdOut.cpp
notifier/notifier_mixin/: CMakeLists.txt  main.cpp
